--- a/public/index.html
+++ b/public/index.html
@@ -227,7 +227,7 @@
         <div class="row" style="padding: 5rem 0rem">
           <div class="col l6 m12">
             <div class="icon-block center">
-              <div class="animated fadeInUp" id="introComponent"> <br>
+              <div class="animated fadeInUp" id="introComponent">
                 <h4 class="Light animated slideInLeft" style="font-family: Aldrich">What We Offer</h4>
                 <p class="animated fadeInUp" style="font-family: Aldrich" id="desc">
                   <span style="font-family: Aldrich; color: #008080; font-size: 1.2rem">c</span><span style="font-family: Aldrich; color: #004c4c; font-size: 2rem">ai</span><span style="font-family: Aldrich; color: #008080; font-size: 1.2rem">rrier</span>
@@ -301,9 +301,9 @@
   <div class="valign-wrapper" style="height: 75vh; color: black; background-color: white">
     <div class="row">
       <div class="col s12 center">
-        <h1 class="Light">FOR HEALTH CARE WORKERS</h1>
+        <h1 class="Light">Leave your email to stay updated!</h1>
         <a href="signin.html" id="business-button" class="btn-small waves-effect waves-light white lighten-1"
-          style="color: black;">Sign Up</a>
+          style="color: black;">cAIr More</a>
       </div>
     </div>
   </div>
@@ -367,10 +367,10 @@
   <div class="valign-wrapper" style=" color: white; background-color: #66b2b2">
     <div class="row">
       <div class="col s12 center">
-        <h1 class="Light">NOT A DOCTOR?</h1>
-        <a href="mailto:?subject=I wanted you to see this site&amp;body=Check out this site http://www.cairtext.com."
+        <h1 class="Light">Share By Email</h1>
+        <a href="mailto:?subject=Check Out This Site: cAIr Technologies&amp;body=HIPAA Compliant Two-Way Messaging: cAIrrier http://www.cairtext.com."
         title="Share by Email" id="business-button" class="btn-small waves-effect waves-light white lighten-1"
-          style="color: #66b2b2">Share to your doctor</a>
+          style="color: #66b2b2">Sign Up</a>
           <br><br>
       </div>
     </div>
