--- a/public/adminPages/dashboard.html
+++ b/public/adminPages/dashboard.html
@@ -83,7 +83,7 @@
                     <div class="animated fadeInLeft card darken-1 topCard" style="height: 515px">
                         <div class="card-content black-text">
                             <span class="card-title" style="color: white; padding: 1rem; background-color: rgb(29, 167, 167)">Recent Patients</span>
-                            <div id="memberList" style="overflow-y: scroll" class="Light"></div>
+                            <div id="memberList" style="height: 430px; overflow-y: scroll"></div>
                         </div>
                     </div>
 
@@ -115,8 +115,11 @@
                             <span class="card-title" style="color: white; padding: 1rem; background-color: rgb(29, 167, 167)">Upcoming Events</span>
                             <div class="container">
                                 <h4 class="Light">August 2: apt. w/ Harvey 5pm</h4>
+                                <div class="black" style="height:1px;"></div>
                                 <h4 class="Light">August 3: David needs to take his pills 6pm</h4>
+                                <div class="black" style="height:1px;"></div>
                                 <h4 class="Light">August 5: apt. w/ Aaron 3pm</h4>
+                                <div class="black" style="height:1px;"></div>
                                 <h4 class="Light">August 6: Video call w/ Austin 1pm</h4>
                             </div>
                         </div>
