--- a/public/adminPages/applications/chat.html
+++ b/public/adminPages/applications/chat.html
@@ -39,7 +39,7 @@
                             <div class="background">
                             </div>
                             <a href="../dashboard.html"><img class="circle" src="/images/cAIrrierLogoTrans.png"></a>
-                <a href=" #name"><span class="name">Welcome to cAIrrier</span></a>
+                            <a href=" #name"><span class="name">Welcome to cAIrrier</span></a>
                             <a href="#email"><span class="email">cAIrrier@gmail.com</span></a>
                         </div>
                     </li>
@@ -50,9 +50,11 @@
                     </li>
                     <li><a class="subheader">Applications</a></li>
                     <li><a href="../applications/patient.html"><i class="material-icons">face</i>Patients</a></li>
-                    <li class="active"><a href="../applications/chat.html"><i class="material-icons">email</i>Messages</a></li>
+                    <li class="active"><a href="../applications/chat.html"><i
+                                class="material-icons">email</i>Messages</a></li>
                     <li><a href="../applications/replies.html"><i class="material-icons">archive</i>Library</a></li>
-                    <li><a href="../applications/diagnostics.html"><i class="material-icons">assessment</i>Diagnostics</a></li>
+                    <li><a href="../applications/diagnostics.html"><i
+                                class="material-icons">assessment</i>Diagnostics</a></li>
                     <li>
                         <div class="divider"></div>
                     </li>
@@ -126,12 +128,35 @@
                                 </div>
                                 <div class="container">
                                     <img src="../../images/test.png" alt="Avatar">
-                                    <p>Yeah, I don't think my body feels good. I think it's something i ate last night. My bowel movements is totally different right now. What should I do?    </p>
+                                    <p>Yeah, I don't think my body feels good. I think it's something i ate last night.
+                                        My bowel movements is totally different right now. What should I do? </p>
                                     <span class="time-right">11:07</span>
                                 </div>
                             </div>
 
-                            <div id="chatRow" class="row" style="background-color: white; padding: 1rem; margin: 0; width: 80% !important">
+
+                            <div class="buttonRow row">
+                                    <div class="co-sm-4">
+                                        <a class="waves-effect waves-light btn-small smartReply">Sympton Check</a>
+                                    </div>
+
+                                    <div class="co-sm-4">
+                                        <a class="waves-effect waves-light btn-small smartReply">Data Analysis</a>
+                                    </div>
+
+                                    <div class="co-sm-4">
+                                        <a class="waves-effect waves-light btn-small smartReply">Action Plan</a>    
+                                    </div>
+                                </div>
+
+                            <div id="chatRow" class="row"
+                                style="background-color: white; padding: 1rem; margin: 0; width: 80% !important">
+
+
+
+
+
+
                                 <div class="col-sm-2">
                                     <h6>Dr. Cas</h6>
                                 </div>
@@ -141,7 +166,8 @@
                                 </div>
 
                                 <div class="col-sm-2">
-                                    <button id="buttonSend" class="btn waves-effect waves-light" type="submit" name="action">Send
+                                    <button id="buttonSend" class="btn waves-effect waves-light" type="submit"
+                                        name="action">Send
                                         <i class="material-icons right">send</i>
                                     </button>
                                 </div>
