--- a/public/adminPages/applications/chat.html
+++ b/public/adminPages/applications/chat.html
@@ -145,7 +145,7 @@
                                     </div>
 
                                     <div class="co-sm-4">
-                                        <a class="waves-effect waves-light btn-small smartReply">Action Plan</a>    
+                                        <a id="actionPlanBtn" class="waves-effect waves-light btn-small smartReply">Action Plan</a>    
                                     </div>
                                 </div>
 
