--- a/public/adminPages/applications/chat.html
+++ b/public/adminPages/applications/chat.html
@@ -141,7 +141,7 @@
                                     </div>
 
                                     <div class="co-sm-4">
-                                        <a class="waves-effect waves-light btn-small smartReply">Data Analysis</a>
+                                        <a id="dataANalysis" class="waves-effect waves-light btn-small smartReply">Data Analysis</a>
                                     </div>
 
                                     <div class="co-sm-4">
