--- a/public/adminPages/applications/chat.html
+++ b/public/adminPages/applications/chat.html
@@ -146,7 +146,7 @@
 
                                     <div class="co-sm-4">
                                         <a id="actionPlanBtn" class="waves-effect waves-light btn-small smartReply">Action Plan</a>    
-                                    </div>s
+                                    </div>
                                 </div>
 
                             <div id="chatRow" class="row"
